--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egel-help",
-  "homepage": "https://OscarFDiaz.github.io/EGEL_Help/",
+  "homepage": "https://github.com/OscarFDiaz/EGEL_Help/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
